--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
     "start:prod": "node dist/main.js"
   },
   "dependencies": {
-    "@nestjs/common": "6.0.4",
+    "@nestjs/common": "^6.8.5",
     "@nestjs/core": "6.0.4",
     "@nestjs/microservices": "6.0.4",
     "@nestjs/platform-express": "^6.0.4",
