feat: add end param to move endpoint

--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,8 @@
     "node-persist": "^3.0.4",
     "reflect-metadata": "0.1.13",
     "rimraf": "2.6.3",
-    "rxjs": "6.4.0"
+    "rxjs": "6.4.0",
+    "say": "^0.16.0"
   },
   "devDependencies": {
     "@types/node": "11.13.4",
