feat: improve ui of web app, add volume slider, add volume control to server

--- a/webapp/public/manifest.json
+++ b/webapp/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Shallow Green",
+  "name": "Control panel for Shallow Green installation",
   "icons": [
     {
       "src": "favicon.ico",
